<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/no_internet_pic"
            android:id="@+id/internet_image_view"
            android:src="@drawable/internet"
            android:layout_width="wrap_content"
            android:layout_height="200dp" />

        <TextView
            android:textColor="@android:color/black"
            android:id="@+id/no_internet_text"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/no_internet_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@android:color/black"
            android:padding="14dp"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/no_internet_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/try_again_internet_button"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/no_internet_button"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:padding="14dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>