<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:background="@android:color/white"
        android:text="@string/termsncondi"
        android:textColor="@android:color/black"
        android:id="@+id/terms_condition_head"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_below="@id/terms_condition_head"
        android:layout_above="@+id/alert_positive_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/general_condition"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:text="@string/terms_general_condition"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:text="@string/disclaimer"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:text="@string/terms_disclaimer"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:text="@string/confidentiality"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:text="@string/terms_confidentiality"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    </ScrollView>

    <Button
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/alert_positive_btn"
        android:background="@android:color/white"
        android:text="cancel"
        android:gravity="center|end"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:layout_alignParentRight="true" />

</RelativeLayout>