<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/no_internet_pic"
            android:src="@drawable/thank_you"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="200dp" />

        <TextView
            android:textColor="@android:color/black"
            android:padding="14dp"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/listed_for_sell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/thank_you_ok"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/ok_btn"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:padding="14dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>