<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@android:color/white">

    <TextView
        android:layout_marginTop="20dp"
        android:text="@string/recover_your_password_title"
        android:textSize="26sp"
        android:textColor="@color/outline"
        android:gravity="center"
        android:layout_width="280dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:background="@android:color/white"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="280dp"
        android:gravity="center"
        android:layout_height="wrap_content">

        <EditText
            android:gravity="center"
            android:background="@drawable/login_edit_text"
            android:padding="14dp"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/outline"
            android:textColor="@color/outline"
            android:lines="1"
            android:id="@+id/forgot_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:hint="@string/registered_email_edit_text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <android.support.v7.widget.AppCompatButton
            android:layout_gravity="center"
            android:id="@+id/recover_password"
            android:layout_width="match_parent"
            android:padding="14dp"
            android:inputType="textCapCharacters"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:background="@drawable/login_button"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/recover_button"/>

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/outline"
            android:text="@string/already_know_the_password"/>

        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/outline"
            android:textStyle="bold"
            android:text="@string/log_in_bottom_text"
            android:id="@+id/forgot_password_login"/>

    </LinearLayout>

</RelativeLayout>