<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layout_weight="1"
    android:clickable="true">

        <ImageView
            android:layout_weight="0.4"
            android:contentDescription="@string/logo_description"
            android:id="@+id/login_logo"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:src="@drawable/logo"
            android:layout_width="match_parent"
            android:layout_height="0dp" />


        <LinearLayout
            android:layout_weight="0.5"
            android:id="@+id/login_layout"
            android:layout_gravity="center"
            android:layout_above="@+id/register_layout"
            android:layout_below="@id/login_logo"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="360px"
            android:layout_height="0dp">

            <!--<TextView
                android:text="Welcome"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/outline"
                android:textSize="50sp"
                android:layout_width="280dp"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:text="Books Reseller"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/outline"
                android:textSize="18sp"
                android:layout_width="280dp"
                android:layout_height="wrap_content" />
            -->


            <EditText
                android:gravity="center"
                android:background="@drawable/login_edit_text"
                android:layout_gravity="center"
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="14dp"
                android:lines="1"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/outline"
                android:textColor="@color/outline"
                android:hint="@string/sign_in_email_hint" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edit_text"
                android:padding="14dp"
                android:lines="1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:textColorHint="@color/outline"
                android:textColor="@color/outline"
                android:hint="@string/sign_in_password_hint" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <android.support.v7.widget.AppCompatButton
                android:layout_gravity="center"
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:padding="14dp"
                android:inputType="textCapCharacters"
                android:background="@drawable/login_button"
                android:text="@string/sign_in_button"/>

            <Button
                android:id="@+id/forgot_password_button"
                android:background="@android:color/transparent"
                android:padding="14dp"
                android:inputType="textCapCharacters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/outline"
                android:text="@string/forgot_password" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="0.1"
            android:id="@+id/register_layout"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/outline"
                android:text="@string/don_t_have_account"/>

            <TextView
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/outline"
                android:textStyle="bold"
                android:text="@string/register_btn"
                android:id="@+id/sign_up"/>

        </LinearLayout>

</LinearLayout>